syntax = "proto3";

package api;

option go_package = "industrial-calculator.v1";

service IndustrialCalculator {
  rpc Process (ProcessRequest) returns (ProcessResponse);
}

enum CommandType {
  PRINT = 0;
  CALC = 1;
}

enum Operation {
  PLUS = 0;
  MINUS = 1;
  MULTIPLY = 2;
}

message Command {
  CommandType type = 1;
  string var = 2;
  Operation op = 3;
  oneof left {
    int64 left_int = 4;
    string left_str = 5;
  }
  oneof right {
    int64 right_int = 6;
    string right_str = 7;
  }
}

message ProcessRequest {
  repeated Command commands = 1;
}

message VariableResult {
  string var = 1;
  int64 value = 2;
}

message ProcessResponse {
  repeated VariableResult results = 1;
}